--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.7.0",
+    "eslint": "^9.7.0",
+    "globals": "^15.8.0",
     "json-server": "^1.0.0-beta.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
