--- a/package.json
+++ b/package.json
@@ -8,12 +8,25 @@
   "author": "Anastasia Dubinina",
   "license": "ISC",
   "description": "",
+  "browserslist": [
+    "> 1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.2",
     "@eslint/js": "^9.7.0",
+    "babel-loader": "^9.1.3",
+    "core-js": "^3.37.1",
     "eslint": "^9.7.0",
     "globals": "^15.8.0",
     "json-server": "^1.0.0-beta.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "es6-promise": "^4.2.8",
+    "es6-promise-polyfill": "^1.2.0",
+    "nodelist-foreach-polyfill": "^1.2.0"
   }
 }
